--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,48 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <ul>
+      <li>
+        <a href="./consept-page.html">Page</a>
+      </li>
+
+      <li>
+        <a href="./header.html">Header</a>
+      </li>
+
+      <li>
+        <a href="./section-one.html">Section one</a>
+      </li>
+
+      <li>
+        <a href="./section-two.html">Section two</a>
+      </li>
+
+      <li>
+        <a href="./section-three.html">Section three</a>
+      </li>
+
+      <li>
+        <a href="./section-four.html">Section four</a>
+      </li>
+
+      <li>
+        <a href="./section-five.html">Section five</a>
+      </li>
+
+      <li>
+        <a href="./section-six.html">Section six</a>
+      </li>
+
+      <li>
+        <a href="./section-seven.html">Section seven</a>
+      </li>
+
+      <li>
+        <a href="./footer.html">Footer</a>
+      </li>
+    </ul>
+
     <script src="scripts/bundle.js"></script>
   </body>
 </html>
