--- a/app/section-six.html
+++ b/app/section-six.html
@@ -22,7 +22,7 @@
           <div>
             <div class="section-comment__card">
               <div class="section-comment__avatar">
-                <img src="./images/image-team-three.png" alt="" />
+                <img src="./images/user-one.png" alt="" />
               </div>
               <div class="section-comment__card-content">
                 <h6 class="section-comment__name subtitle-one">Joanna Booth</h6>
